# GROD

./: .gitignore  Cargo.toml  DEV_LOG.md  TODO.md
src/: main.rs
src/data/: alpacaReqwest.rs
src/indicators/Momentum/: MovingAverage.rs
src/indicators/Volitility/: StandardDeviation.rs  Variance.rs
