[package]
name = "GROD"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16.1"
polars = "0.44.2"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] } 
clap = { version = "4.0", features = ["derive"] }
rust_decimal = "1.0"
indicatif = "0.17"
plotters = "0.3" 
ta = "0.5.0"
dotenv = "0.15.0"
governor = "0.7.0"
base64 = "0.22.1"
